--- a/bin/metalenguajes/Attribute Grammar.html
+++ b/bin/metalenguajes/Attribute Grammar.html
@@ -18,11 +18,11 @@ table { border-collapse:collapse; }
 <tr class="cabecera"> <td><strong>&nbsp;Nodo</strong></td><td><strong>&nbsp;Predicados&nbsp;</strong></td><td><strong>&nbsp;Reglas&nbsp;Semánticas&nbsp;</strong></td></tr>
 
 <tr><td><span class="nodo">programa</span>&nbsp;&rarr;  <span class="nombreAtt">definicion</span><span class="tipoAtt">:definicion*</span></td><td></td><td></td></tr>
-<tr><td><span class="nodo">llamadaFuncion</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span> <span class="nombreAtt">parametros</span><span class="tipoAtt">:expresion*</span></td><td></td><td></td></tr>
+<tr><td><span class="nodo">parametro</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span> <span class="nombreAtt">tipo</span><span class="tipoAtt">:tipo</span></td><td></td><td></td></tr>
 <tr><td>&nbsp;</td><td></td><td></td></tr>
 
-<tr><td><span class="nodo">defVariable</span>:<span class="categoria">definicion</span>&nbsp;&rarr;  <span class="nombreAtt">tipo</span><span class="tipoAtt">:tipo</span> <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span></td><td></td><td></td></tr>
-<tr><td><span class="nodo">defFuncion</span>:<span class="categoria">definicion</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span> <span class="nombreAtt">retorno</span><span class="tipoAtt">:tipo</span> <span class="nombreAtt">sentencia</span><span class="tipoAtt">:sentencia*</span></td><td></td><td></td></tr>
+<tr><td><span class="nodo">defVariable</span>:<span class="categoria">definicion</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span> <span class="nombreAtt">tipo</span><span class="tipoAtt">:tipo</span></td><td></td><td></td></tr>
+<tr><td><span class="nodo">defFuncion</span>:<span class="categoria">definicion</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span> <span class="nombreAtt">param</span><span class="tipoAtt">:parametro*</span> <span class="nombreAtt">retorno</span><span class="tipoAtt">:tipo</span> <span class="nombreAtt">vars</span><span class="tipoAtt">:defVariable*</span> <span class="nombreAtt">sentencia</span><span class="tipoAtt">:sentencia*</span></td><td></td><td></td></tr>
 <tr><td><span class="nodo">defStruct</span>:<span class="categoria">definicion</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span> <span class="nombreAtt">campos</span><span class="tipoAtt">:defVariable*</span></td><td></td><td></td></tr>
 <tr><td>&nbsp;</td><td></td><td></td></tr>
 
@@ -31,6 +31,7 @@ table { border-collapse:collapse; }
 <tr><td><span class="nodo">tipoArray</span>:<span class="categoria">tipo</span>&nbsp;&rarr;  <span class="nombreAtt">numero</span><span class="tipoAtt">:String</span> <span class="nombreAtt">tipo</span><span class="tipoAtt">:tipo</span></td><td></td><td></td></tr>
 <tr><td><span class="nodo">tipoChar</span>:<span class="categoria">tipo</span>&nbsp;&rarr; &lambda;</td><td></td><td></td></tr>
 <tr><td><span class="nodo">tipoStruct</span>:<span class="categoria">tipo</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span></td><td></td><td></td></tr>
+<tr><td><span class="nodo">tipoVoid</span>:<span class="categoria">tipo</span>&nbsp;&rarr; &lambda;</td><td></td><td></td></tr>
 <tr><td>&nbsp;</td><td></td><td></td></tr>
 
 <tr><td><span class="nodo">read</span>:<span class="categoria">sentencia</span>&nbsp;&rarr;  <span class="nombreAtt">expresion</span><span class="tipoAtt">:expresion</span></td><td></td><td></td></tr>
@@ -41,6 +42,7 @@ table { border-collapse:collapse; }
 <tr><td><span class="nodo">if</span>:<span class="categoria">sentencia</span>&nbsp;&rarr;  <span class="nombreAtt">condicion</span><span class="tipoAtt">:expresion</span> <span class="nombreAtt">cierto</span><span class="tipoAtt">:sentencia*</span> <span class="nombreAtt">falso</span><span class="tipoAtt">:sentencia*</span></td><td></td><td></td></tr>
 <tr><td><span class="nodo">while</span>:<span class="categoria">sentencia</span>&nbsp;&rarr;  <span class="nombreAtt">condicion</span><span class="tipoAtt">:expresion</span> <span class="nombreAtt">contenido</span><span class="tipoAtt">:sentencia*</span></td><td></td><td></td></tr>
 <tr><td><span class="nodo">asignacion</span>:<span class="categoria">sentencia</span>&nbsp;&rarr;  <span class="nombreAtt">left</span><span class="tipoAtt">:expresion</span> <span class="nombreAtt">right</span><span class="tipoAtt">:expresion</span></td><td></td><td></td></tr>
+<tr><td><span class="nodo">llamadaFuncion</span>:<span class="categoria">expresion, sentencia</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span> <span class="nombreAtt">parametros</span><span class="tipoAtt">:expresion*</span></td><td></td><td></td></tr>
 <tr><td>&nbsp;</td><td></td><td></td></tr>
 
 <tr><td><span class="nodo">exprAritmetica</span>:<span class="categoria">expresion</span>&nbsp;&rarr;  <span class="nombreAtt">left</span><span class="tipoAtt">:expresion</span> <span class="nombreAtt">operador</span><span class="tipoAtt">:String</span> <span class="nombreAtt">right</span><span class="tipoAtt">:expresion</span></td><td></td><td></td></tr>
@@ -51,6 +53,7 @@ table { border-collapse:collapse; }
 <tr><td><span class="nodo">literalReal</span>:<span class="categoria">expresion</span>&nbsp;&rarr;  <span class="nombreAtt">lexema</span><span class="tipoAtt">:String</span></td><td></td><td></td></tr>
 <tr><td><span class="nodo">caracter</span>:<span class="categoria">expresion</span>&nbsp;&rarr;  <span class="nombreAtt">string</span><span class="tipoAtt">:String</span></td><td></td><td></td></tr>
 <tr><td><span class="nodo">variable</span>:<span class="categoria">expresion</span>&nbsp;&rarr;  <span class="nombreAtt">lexema</span><span class="tipoAtt">:String</span></td><td></td><td></td></tr>
+<tr><td><span class="nodo">llamadaFuncion</span>:<span class="categoria">expresion, sentencia</span>&nbsp;&rarr;  <span class="nombreAtt">nombre</span><span class="tipoAtt">:String</span> <span class="nombreAtt">parametros</span><span class="tipoAtt">:expresion*</span></td><td></td><td></td></tr>
 <tr><td>&nbsp;</td><td></td><td></td></tr>
 
 </table>
